# life-note-api

./: .brainstorming.md  .gitignore  README.md  pyproject.toml  test.ipynb  tests.ipynb
app/: app.py  application.py  config.py
app/core/: constants.py
app/database/: databasemanager.py  feeling.db  feelingday.sql  model.py  tables.py
app/db/: connect.py  connection.py  feeling.db  tables.py
app/depends/: customer_id.py
app/routes/: customer.py  record.py  text.py  user.py
app/schemas/: record.py  user.py
app/services/: password.py
app/services/auth/: authenticate.py  create_jwt.py
app/services/model/: db_model.py
app/tests/: test.ipynb
app/utils/: customer_id.py  jwtencode.py  pwd.py
src/: app.py
